# TechDB

./: .cursorignore  .gitignore  README.md  compose.yaml  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/api/: db.py  main.py  migrate_db.py
backend/api/cruds/: article.py  blog.py  tag.py
backend/api/models/: article.py  article_tags.py  blog.py  tag.py
backend/api/router/: article.py  blog.py  tag.py
backend/api/schemas/: article.py  blog.py  tag.py
backend/api/services/: article_service.py
backend/api/test/: test_main.py
chatbot/: Dockerfile  README.md  pyproject.toml
django/: .gitignore  README.md  dockerfile  pyproject.toml
django/backend/: settings.py  urls.py
frontend/: .eslintignore  .eslintrc.cjs  .prettierignore  Dockerfile  LICENSE  components.json  jest.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/check/: page.tsx
frontend/app/types/: index.ts
frontend/features/article/: ArticleCard.tsx  ArticleList.tsx  index.ts
frontend/features/count/: CountUp.test.tsx  CountUp.tsx  index.ts
frontend/features/tag/: TagCard.tsx  TagLists.tsx  index.ts
frontend/lib/: config.ts
scraping/: README.md  license-config.json  license-header.txt  package-lock.json  package.json  rollup.config.mjs
scraping/src/: index.ts
scraping/src/services/: spreadsheetUtils.ts
scraping/src/utils/: stringUtils.ts
scraping/test/: spreadsheetUtils.test.ts  stringUtils.test.ts
(+2 files in other folders)
