[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlalchemy = "^2.0.25"
aiomysql = "^0.2.0"
requests = "^2.31.0"
emoji = "^2.10.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.3"
aiosqlite = "^0.19.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
